correct typo in Menubar

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@
 /* Global Setting */
 html, body { color: black; font-family: 'noto-eng','noto-kor' !important; height: 100%; background:white}
 * {margin: 0;padding: 0;box-sizing: border-box}
+a {text-decoration:none;color:inherit}
 b {position:relative!important;font-family: 'noto-eng-b','noto-kor-b'}
 img {display:block}
 
