--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@
 }
 @font-face {
     font-family: 'noto-kor-b';
+    /* src:url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.woff2') format('woff2'),
+        url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.woff') format('woff'),
+        url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.otf') format('opentype'); */
     src:url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.woff2') format('woff2'),
         url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.woff') format('woff'),
         url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.otf') format('opentype');
@@ -125,10 +128,10 @@ footer * {position: relative}
     z-index:20;
     position:absolute;
     bottom:80px;
-    left:5%;
+    left:70px;
     color:#ffffe4;
     display:flex;
-    width:930px;
+    width:900px;
 }
 ._profile > a {
     /* min-width: 200px; */
@@ -140,14 +143,6 @@ footer * {position: relative}
     word-break: keep-all;
     font-size:50pt;
     margin:auto;
-}
-._profile > a > p{
-    position: inherit;
-    display: inherit;
-    text-align: inherit;
-    font:inherit;
-    word-break: inherit;
-    margin:inherit;
 }
 ._profile > p{
     position:relative;
@@ -241,7 +236,7 @@ footer ._goto-top:hover {
 /* Menubar */
 .menubar {
     width:100%;
-    margin-top:20px;
+    margin-top:25px;
     z-index:999;
     display:flex;
     position:absolute;
@@ -296,6 +291,7 @@ footer ._goto-top:hover {
     position:relative;
     margin:0;padding:0;
     background-color:none;
+    border-bottom:1pt solid  white;
 }
 
 
@@ -652,18 +648,19 @@ footer ._goto-top:hover {
 }
 
 
-        
-.post-head {background-color:none;border-bottom:1pt solid gray;background-color:rgb(24,24,32);}
+.post-head {background-color:none;border-bottom:1pt solid gray;background-color:rgb(24,24,32);background-attachment: local;}
 .post-head .post-info *{position:relative}
-.post-head .post-info {position:relative;margin-top:130px;z-index:900;text-align:left;margin-bottom:50px;}
-.post-head .post-publish {position:relative;text-align:left;margin:0;margin-right:auto;font-family:'noto-eng','noto-kor';font-size:11pt;color:white}
+/* .post-head .post-info {position:relative;margin-top:130px;z-index:900;text-align:left;margin-bottom:20px} */
+.post-head .post-info {position:absolute;z-index:900;text-align:left;top:50%;right:50%;transform:translate(50%,-50%)}
+.post-head .post-publish {position:relative;text-align:left;margin:0;margin-right:auto;font-family:'noto-eng','noto-kor';font-size:11pt;color:white;text-align:center}
 .post-head .post-publish a {color:inherit;text-decoration:none;font-family:inherit;font-size:inherit}
-.post-head .post-title {position:relative;font-family:'noto-eng-b','noto-kor-b';font-size:32pt;padding:0;margin:0px;color:white}
-.post-head .post-keywords {position:relative;list-style-type:none;margin:0px 0px;padding:0;width:100%;display:inline-block}
-.post-head .post-keyword {position:relative;background-color:rgba(240,240,210,0.2);border-radius:5px;padding:0px 6px;padding-bottom:2px;
+.post-head .post-title {position:relative;font-family:'noto-eng-b','noto-kor-b';font-size:32pt;padding:0;margin:0px;color:white;text-align:center;word-break: break-all;}
+.post-head .post-keywords {position:relative;list-style-type:none;margin:0px 0px;padding:0;padding-top:5px;width:100%;display:inline-block;text-align:center}
+.post-head .post-keyword {position:relative;background-color:rgba(240,240,210,0.4);border-radius:5px;padding:0px 6px;padding-bottom:2px;
     margin:0px;margin-right:5px;display:inline-block}
-.post-head .post-keyword a {color:rgb(220,220,210);font-family:'noto-eng','noto-kor';font-size:10pt;text-decoration:none}
-.post-head .post-update {position:relative;text-align:left;margin:10px 0;margin-right:auto;font-family:'noto-eng-ii','noto-kor-ii';font-size:9pt;color:white} 
+.post-head .post-keyword a {color:rgb(230,230,215);font-family:'noto-eng','noto-kor';font-size:10pt;text-decoration:none}
+.post-head .post-update {position:relative;text-align:left;margin:0;margin-top:10px;font-family:'noto-eng-ii','noto-kor-ii';font-size:9pt;color:white;text-align:center} 
+
 @media screen and (max-width: 1000px) {
     .post-head .post-title {font-size:24pt}
 }
@@ -681,18 +678,23 @@ footer ._goto-top:hover {
 
 .post-body{width:100%}
 .post-body, .post-body *{position:relative;display:block;text-decoration:none;font-size:12pt;font-family:'noto-eng','noto-kor';line-height:1.7;text-align:left;padding:0;margin:0 auto;color:black}
-.post-body a {display:inline-block;font-size:inherit;font-family:inherit;border-bottom: dashed 1pt rgba(0,0,0,0.6);color:inherit}
+.post-body a {display:inline-block;font-size:inherit;font-family:inherit;color:inherit;border-bottom: dashed 1pt rgba(0,0,0,0.6)}
 .post-body b {display:inline-block;font-size:inherit;font-family:'noto-eng-b','noto-kor-b'}
-.post-body section{margin:40px auto}
-.post-body h1 {display:block;font-size:25pt;font-family:'noto-eng-b','noto-kor-b';margin-bottom:10px}
-.post-body h2 {display:block;font-size:25pt;font-family:'noto-eng','noto-kor';margin-bottom:10px}
-.post-body h3 {display:block;font-size:15pt;font-family:'noto-eng-b','noto-kor-b';margin-bottom:8px}
-.post-body h4 {display:block;font-size:15pt;font-family:'noto-eng','noto-kor';margin-bottom:8px}
-.post-body h5 {display:block;font-size:12pt;font-family:'noto-eng-b','noto-kor-b';margin-bottom:5px}
-.post-body h6 {display:block;font-size:12pt;font-family:'noto-eng','noto-kor';margin-bottom:5px}
-.post-body p {display:inline-block;font-size:11pt;font-family:'noto-eng','noto-kor';margin-bottom:10px;}
+.post-body section{margin:50px auto}
+.post-body h1 {display:block;font-size:25pt;font-family:'noto-eng-b','noto-kor-b';margin-bottom:10px;margin-top:30px}
+.post-body h2 {display:block;font-size:25pt;font-family:'noto-eng','noto-kor';margin-bottom:10px;margin-top:30px}
+.post-body h3 {display:block;font-size:18pt;font-family:'noto-eng','noto-kor';margin-bottom:10px;margin-top:25px}
+.post-body h4 {display:block;font-size:18pt;font-family:'noto-eng-i','noto-kor-i';margin-bottom:10px;margin-top:25px}
+.post-body h5 {display:block;font-size:13pt;font-family:'noto-eng','noto-kor';margin-bottom:10px;margin-top:20px}
+.post-body h6 {display:block;font-size:13pt;font-family:'noto-eng-i','noto-kor-i';margin-bottom:10px;margin-top:20px}
+.post-body ol, .post-body ul {margin-left:50px;}
+.post-body li {display:list-item;font-size:11pt;font-family:'noto-eng-b','noto-kor-b'}
+.post-body ol li {list-style:decimal outside;}
+.post-body ul li {list-style:disc outside;}
+.post-body p {display:inline-block;font-size:11pt;font-family:'noto-eng','noto-kor';margin-bottom:10px}
 .post-body hr {background:none;border:none;margin:0;padding:0;width:100%}
-.post-body .post-abstract {margin:20px auto;text-align:left;padding:10px 15px;border-left:5px solid gray}
+.post-body .post-abstract {margin:40px auto;text-align:left;padding:25px 25px;border-bottom:2px solid gray;border-top:2px solid gray}
+.post-body .post-abstract p{color:darkslategray;}
 .post-body .post-meta {font-family:'noto-eng-i','noto-kor-i';font-size:10pt}
 
 .related-posts {border-top:1pt solid black}
@@ -723,7 +725,7 @@ footer ._goto-top:hover {
 .mt4{margin-top:50px!important}
 .mt5{margin-top:80px!important} */
 
-.post-footer{margin-top:80px;background-color:rgba(220,220,220,0.5);width:100%}
+.post-footer{background-color:rgb(220,220,220);width:100%;padding:0;margin:0;border-bottom:1pt solid rgb(24,24,32)}
 
 .load-tagged-posts {padding:50px 0px;border-bottom:1pt gray dashed;margin:0 auto}
 .load-tagged-posts > h1 {text-decoration:underline;font-family:'noto-eng-b','noto-kor-b';font-size:20pt;text-align:center;color:black;text-transform:uppercase}
