--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,8 @@ footer ._footer-line{
     transform: translateX(-50%); */
     margin-bottom:30px;
     margin-top:40px;
+    margin-bottom:50px;
+    margin-top:70px;
     /* top: 50px; */
     text-align:center;
 }
